<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/MainText"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/welcome_to_workflow"
        android:background="@color/Red"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MainText"
        android:layout_alignStart="@+id/MainText"
        android:layout_alignEnd="@+id/MainText"
        android:layout_marginStart="260dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:onClick="onClickNext"
        android:text="@string/Activity_1_screen"
        android:background="@color/Red"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:onClick="onClickNext2"
        android:text="@string/Activity_2_screen"
        android:background="@color/Red"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:onClick="onClickNext3"
        android:text="@string/Activity_3_screen"
        android:background="@color/Red"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:onClick="onClickNext4"
        android:text="@string/ViewMap"
        android:background="@color/Red"
        android:textColor="@color/White"/>

    <fragment
        android:id="@+id/Maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp" />

    <ScrollView
        android:layout_width="246dp"
        android:layout_height="176dp"
        android:layout_above="@+id/Maps"
        android:layout_below="@+id/MainText"
        android:layout_alignEnd="@+id/MainText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="6dp"
        android:background="@color/White">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="6dp"
                android:text="YourScore:%1$d" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="6dp"
                android:text="@string/CreateAJob"
                android:onClick="createJob"
                android:background="@color/Red"
                android:textColor="@color/White"/>

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="6dp"
                android:ems="10"
                android:hint="Location of Project"
                android:inputType="textPersonName" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>